--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<div id="content">
 			<h1> HTML Exercise </h1>
 				<p>The purpose of this exercise is to put the lessons learned from previous exercises together to build a web page of your own.</p>
+        <p> It's going to be fun</p>
 			<h2>Previously...</h2>
 		<ul>
       <li>You looked at the HTML that made up a <a href="http://edinburgh.codefirstgirls.org.uk/courses/html/sample.html">Sample Page</a></li>
