--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
+    <link rel='stylesheet' type='text/css' href='CSS/style.css'>
 		<title> HTML Exercise </title>
 	</head>
 	<body>
