--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 
           <div class="row">
             <div class="col-sm-4">
-                <img src="img/huck.jpg" class="img-thumbnail" alt="" />
+                <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
-                <img src="img/huck2.jpg" class="img-thumbnail" alt="" />
+                <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
-                <img src="img/huck3.jpg" class="img-thumbnail" alt="" />
+                <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
@@ -47,21 +47,21 @@
           <!-- start a new row --> 
           <div class="row">
             <div class="col-sm-4">
-                <img src="img/huck4.jpg" alt="" class="img-thumbnail" />
+                <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" alt="" class="img-thumbnail" />
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
-                <img src="img/huck5.jpg" class="img-thumbnail" alt="" />
+                <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
-                <img src="img/huck6.jpg" class="img-thumbnail" alt="" />
+                <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
@@ -72,7 +72,7 @@
         <div class="col-sm-3" id="sidebar"> <!-- this is the side bar - note the ID! --> 
           
           <!-- note that this image has both an ID and a class -->   
-          <img src="img/ivana.jpg" id="me-img" class="img-circle" alt="" />
+          <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" id="me-img" class="img-circle" alt="" />
           
           <div class="list-group">
             <a href="#" class="list-group-item active">Home</a>
