--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
         <div class="col-sm-9"> <!-- this is the main container --> 
 
           <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example of a Bootstrap hero unit with some text inside, along with a Call-to-Action button of some kind.</p>
-            <button class="btn btn-default">Click here!</button>
+            <h1>Penguin's Are Awesome</h1>
+            <p>Check it out</p>
+            <button class="btn btn-default">Don't Click</button>
           </div>
 
           <div class="row">
             <div class="col-sm-4">
                 <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
-              <h2>Heading</h2>
+              <h2>Leaping Penguins</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
                 <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
-              <h2>Heading</h2>
+              <h2>Swimming Penguins</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
                 <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
-              <h2>Heading</h2>
+              <h2>Baby Penguins</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
@@ -48,21 +48,21 @@
           <div class="row">
             <div class="col-sm-4">
                 <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" alt="" class="img-thumbnail" />
-              <h2>Heading</h2>
+              <h2>Penguin's Gathering</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
                 <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
-              <h2>Heading</h2>
+              <h2>Penguins Eating</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
 
             <div class="col-sm-4">
                 <img src="http://deeplythinking.files.wordpress.com/2011/06/penguins.jpg" class="img-thumbnail" alt="" />
-              <h2>Heading</h2>
+              <h2>Penguins Hanging Out</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
