--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
  <head> 
  <title>My webpage</title> 
  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' type'text/css' href='css/bootstrap.css'>
-
- <link rel='stylesheet' type'text/css' href='css/style.css'>
+  <link rel='stylesheet' type'text/css' href='css/bootstrap'>
+  <link rel='stylesheet' type'text/css' href='css/style.css'>
  </head> 
  <body> 
-  <h1>  Penguins are Cool </h1>
+  <h1> Penguins are Cool </h1>
   <h3> really cool </h3>
 
   <div class="container"> 
