--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
  <head> 
  <title>My webpage</title> 
  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' type'text/css' href='css/bootstrap'>
-  <link rel='stylesheet' type'text/css' href='css/style.css'>
+  <link rel='stylesheet' type'text/css' href='CSS/bootstrap'>
+  <link rel='stylesheet' type'text/css' href='CSS/style.css'>
  </head> 
  <body> 
   <h1> Penguins are Cool </h1>
