attempt to fix columns

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     More Lines
   </P>
 
-  <a href=“http://www.google.co.uk”>Google it</a>
+  <a href=“https://www.google.co.uk”>Google it</a>
 
 
 
@@ -50,5 +50,3 @@
 
 </body> 
 </html>
-
-
