jumbotron div added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p> Paragraphs should be longer </P>
       </div>
       <div class="col-sm-4">
-        
+
         <h2> Second Header </h2>
         <p> Paragraphs should be longer </P>
       </div>
@@ -28,6 +28,7 @@
         <h2> Third Header </h2>
         <p> Paragraphs should be longer</P>
           <button type="button" class="btn btn-lg btn-info">Button</button>
+        </div>
       </div>
 
     </div>
